adds a bunch of java9 warning suppression